--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ServiceDemo</string>
     <string name="stop_service">Stop Service</string>
     <string name="start_service">Start Service</string>
+    <string name="service_demo">Service Demo</string>
 </resources>
